--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
 name: ML Pipeline CI
 
+# pushでもpull_requestでも実行されるようにする
 on:
-  # push:
-  #   branches: [ main, master  ]
+  push:
+    branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
 
 jobs:
   test:
